Initial MultiNIC setup

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -21,8 +21,8 @@ num-rngs = 3
 
 # Cluster Configuration
 #
-*.numMasters = ${NM=4}
-*.slavesPerMaster = ${SPM=2}
+*.numMasters = ${NM=1}
+*.slavesPerMaster = ${SPM=1}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
 
@@ -199,8 +199,7 @@ result-dir = ./results/ground_testing/
 *.radioMedium**.obstacleLossType = "IdealObstacleLoss"
 
 *.nodeGround**.udpApp[0].typename = "UDPSink"
-*.nodeMaster[1].udpApp[0].typename = "UDPBasicApp"
-**.udpApp[*].typename = "UDPSink" # All other nodes with BasicApp
+**.udpApp[*].typename = "UDPBasicApp" # All other nodes with BasicApp
 **.udpApp[*].destAddresses = "nodeGround[0]"
 
 **.mac.numSlots = ${NM} + 2 # +1 for ground (acting like an extra master)
@@ -221,31 +220,42 @@ result-dir = ./results/ground_testing/
 extends = GroundStation
 result-dir = ./results/multi_testing/
 
-*.nodeSlave**numRadios = 2
-*.nodeMaster**numRadios = 2
+#*.nodeSlave**.numRadios = 2
+#*.nodeMaster**.numRadios = 2
 
 # NIC --- S2G ---
 #
+*.node**.wlan[*].bitrate = 2Mbps
+
+*.nodeGround**.wlan[0].typename = "IdealWirelessNic"
+*.nodeGround**.wlan[0].mac.address = "auto"
+*.nodeGround**.wlan[0].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
+*.nodeGround**.wlan[0].mac.headerLength = 10B
+*.nodeGround**.wlan[0].mac.promiscuous = false
+*.nodeGround**.wlan[0].mac.fullDuplex = false
+*.nodeGround**.wlan[0].mac.useAck = true
+*.nodeGround**.wlan[0].mac.ackTimeout = 1s
+
 *.node**.wlan[1].typename = "IdealWirelessNic"
-# MAC
-#
-#*.node**.wlan[1].macType = "IdealMac"
-*.node**.wlan[1].address = "auto"
-*.node**.wlan[1].bitrate = 2Mbps
-*.node**.wlan[1].mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-*.node**.wlan[1].headerLength = 10B
-*.node**.wlan[1].promiscuous = false
-*.node**.wlan[1].fullDuplex = false
-*.node**.wlan[1].useAck = false
-*.node**.wlan[1].ackTimeout = 100ms
+*.node**.wlan[1].mac.address = "auto"
+*.node**.wlan[1].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
+*.node**.wlan[1].mac.headerLength = 10B
+*.node**.wlan[1].mac.promiscuous = false
+*.node**.wlan[1].mac.fullDuplex = false
+*.node**.wlan[1].mac.useAck = true
+*.node**.wlan[1].mac.ackTimeout = 1s
 
 # Radio
 # 
-*.node**.wlan[1].radioType = "IdealRadio"
+*.nodeGround**.wlan[0].radio.radioMediumModule = "radioMedium[1]"
+*.nodeGround**.wlan[0].radio.transmitter.preambleDuration = 0s
+*.nodeGround**.wlan[0].radio.transmitter.headerBitLength = 0b
+*.nodeGround**.wlan[0].radio.transmitter.detectionRange = 999m
+*.nodeGround**.wlan[0].radio.transmitter.interferenceRange = 0m
+*.nodeGround**.wlan[0].radio.transmitter.communicationRange = 75m # Should be enough only to talk to closest master
+*.nodeGround**.wlan[0].radio.receiver.ignoreInterference = true
+
 *.node**.wlan[1].radio.radioMediumModule = "radioMedium[1]"
-*.node**.wlan[1].radio.displayCommunicationRange = true
-# --- Transmitter / Receiver
-*.node**.wlan[1].radio.transmitter.bitrate = 2kbps # mtu will be important
 *.node**.wlan[1].radio.transmitter.preambleDuration = 0s
 *.node**.wlan[1].radio.transmitter.headerBitLength = 0b
 *.node**.wlan[1].radio.transmitter.detectionRange = 999m
@@ -253,6 +263,8 @@ result-dir = ./results/multi_testing/
 *.nodeSlave**.wlan[1].radio.transmitter.communicationRange = 75m
 *.nodeMaster**.wlan[1].radio.transmitter.communicationRange = 225m
 *.node**.wlan[1].radio.receiver.ignoreInterference = true
+
+*.node**.bitrate = 2Mbps # 2kbps # mtu will be important
 
 					#											#
 					#			OrbitingGroundStation			#
