Resolved Multi-NIC expunge time scheduling error

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,7 +6,7 @@
 # TODO: Seperate ini files
 [Config Clusters]
 network = Base
-sim-time-limit = 200s
+sim-time-limit = 50s
 #sim-time-limit.param-record-as-scalar = true
 
 # TODO: Multiple run repitions
@@ -58,7 +58,7 @@ num-rngs = 3
 **.udpApp[*].messageLength.param-record-as-scalar = true
 **.udpApp[*].sendInterval = 10s
 **.udpApp[*].startTime = 0s 
-**.udpApp[*].stopTime = 100s
+**.udpApp[*].stopTime = 40s
 
 # NIC --- S2S---
 #
@@ -168,10 +168,10 @@ extends = Clusters
 
 **.dymo.clientAddresses = "" # Router is always its own client
 #**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); - TODO
-**.dymo.activeInterval = 5s # 5s 2. DYMO parameter group
+**.dymo.activeInterval = 20s # 5s 2. DYMO parameter group
 **.dymo.useMulticastRREP = false
 **.dymo.maxIdleTime = 200s # 200s MAX_IDLETIME
-**.dymo.maxSequenceNumberLifetime = 10s # Used to calculate default route expiration times
+**.dymo.maxSequenceNumberLifetime = 300s # Used to calculate default route expiration times
 # "RREQ not received within RREQ_WAIT_TIME, RREQ_Gen may retry the Route Discovery by generating another RREQ."
 **.dymo.routeRREQWaitTime =	10s # 2s ROUTE_RREQ_WAIT_TIME
 **.dymo.rreqHolddownTime = 10s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
@@ -213,15 +213,12 @@ result-dir = ./results/ground_testing/
 					#								#
 					# 			MultiNIC			#
 					#								#
-#
-# Work In Progress
-#
 [Config MultiNIC]
 extends = GroundStation
 result-dir = ./results/multi_testing/
 
-#*.nodeSlave**.numRadios = 2
-#*.nodeMaster**.numRadios = 2
+*.nodeSlave**.numRadios = 2
+*.nodeMaster**.numRadios = 2
 
 # NIC --- S2G ---
 #
@@ -246,13 +243,15 @@ result-dir = ./results/multi_testing/
 *.node**.wlan[1].mac.ackTimeout = 1s
 
 # Radio
-# 
+#
+# TODO: Make sure bitrate is lower than S2S radios when testing
 *.nodeGround**.wlan[0].radio.radioMediumModule = "radioMedium[1]"
 *.nodeGround**.wlan[0].radio.transmitter.preambleDuration = 0s
 *.nodeGround**.wlan[0].radio.transmitter.headerBitLength = 0b
 *.nodeGround**.wlan[0].radio.transmitter.detectionRange = 999m
 *.nodeGround**.wlan[0].radio.transmitter.interferenceRange = 0m
 *.nodeGround**.wlan[0].radio.transmitter.communicationRange = 75m # Should be enough only to talk to closest master
+*.nodeGround**.wlan[0].radio.transmitter.bitrate = 1.9Mbps # Should be enough only to talk to closest master
 *.nodeGround**.wlan[0].radio.receiver.ignoreInterference = true
 
 *.node**.wlan[1].radio.radioMediumModule = "radioMedium[1]"
@@ -260,11 +259,10 @@ result-dir = ./results/multi_testing/
 *.node**.wlan[1].radio.transmitter.headerBitLength = 0b
 *.node**.wlan[1].radio.transmitter.detectionRange = 999m
 *.node**.wlan[1].radio.transmitter.interferenceRange = 0m
+*.node**.wlan[1].radio.transmitter.bitrate = 1.9Mbps
 *.nodeSlave**.wlan[1].radio.transmitter.communicationRange = 75m
 *.nodeMaster**.wlan[1].radio.transmitter.communicationRange = 225m
 *.node**.wlan[1].radio.receiver.ignoreInterference = true
-
-*.node**.bitrate = 2Mbps # 2kbps # mtu will be important
 
 					#											#
 					#			OrbitingGroundStation			#
