Add link cost metric based on datarate of interface to rteMsgs

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -222,9 +222,9 @@ result-dir = ./results/multi_testing/
 
 # NIC --- S2G ---
 #
-*.node**.wlan[*].bitrate = 2Mbps
-
+# TODO: Make sure bitrate is lower than S2S radios when testing
 *.nodeGround**.wlan[0].typename = "IdealWirelessNic"
+*.nodeGround**.wlan[0].bitrate = 1Mbps
 *.nodeGround**.wlan[0].mac.address = "auto"
 *.nodeGround**.wlan[0].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 *.nodeGround**.wlan[0].mac.headerLength = 10B
@@ -234,6 +234,7 @@ result-dir = ./results/multi_testing/
 *.nodeGround**.wlan[0].mac.ackTimeout = 1s
 
 *.node**.wlan[1].typename = "IdealWirelessNic"
+*.node**.wlan[1].bitrate = 1Mbps
 *.node**.wlan[1].mac.address = "auto"
 *.node**.wlan[1].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 *.node**.wlan[1].mac.headerLength = 10B
@@ -244,14 +245,12 @@ result-dir = ./results/multi_testing/
 
 # Radio
 #
-# TODO: Make sure bitrate is lower than S2S radios when testing
 *.nodeGround**.wlan[0].radio.radioMediumModule = "radioMedium[1]"
 *.nodeGround**.wlan[0].radio.transmitter.preambleDuration = 0s
 *.nodeGround**.wlan[0].radio.transmitter.headerBitLength = 0b
 *.nodeGround**.wlan[0].radio.transmitter.detectionRange = 999m
 *.nodeGround**.wlan[0].radio.transmitter.interferenceRange = 0m
 *.nodeGround**.wlan[0].radio.transmitter.communicationRange = 75m # Should be enough only to talk to closest master
-*.nodeGround**.wlan[0].radio.transmitter.bitrate = 1.9Mbps # Should be enough only to talk to closest master
 *.nodeGround**.wlan[0].radio.receiver.ignoreInterference = true
 
 *.node**.wlan[1].radio.radioMediumModule = "radioMedium[1]"
@@ -259,7 +258,6 @@ result-dir = ./results/multi_testing/
 *.node**.wlan[1].radio.transmitter.headerBitLength = 0b
 *.node**.wlan[1].radio.transmitter.detectionRange = 999m
 *.node**.wlan[1].radio.transmitter.interferenceRange = 0m
-*.node**.wlan[1].radio.transmitter.bitrate = 1.9Mbps
 *.nodeSlave**.wlan[1].radio.transmitter.communicationRange = 75m
 *.nodeMaster**.wlan[1].radio.transmitter.communicationRange = 225m
 *.node**.wlan[1].radio.receiver.ignoreInterference = true
