Added unique IPv4 address for ground. Added unique prefixes for ground, masters and slaves. Added function in DYMO to get IPv4 address for interface given interface name. Added flag to allow DYMO to identify ground station.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,7 +6,8 @@
 # TODO: Seperate ini files
 [Config Clusters]
 network = Base
-sim-time-limit = 50s
+#sim-time-limit = 5s
+sim-time-limit = 250s
 #sim-time-limit.param-record-as-scalar = true
 
 # TODO: Multiple run repitions
@@ -56,9 +57,13 @@ num-rngs = 3
 **.udpApp[*].destPort = 5000
 **.udpApp[*].messageLength = ${ML = 128}B
 **.udpApp[*].messageLength.param-record-as-scalar = true
+#*.nodeSlave**.udpApp[*].sendInterval = 3s
+#*.nodeMaster**.udpApp[*].sendInterval = 2s
 **.udpApp[*].sendInterval = 10s
-**.udpApp[*].startTime = 0s 
-**.udpApp[*].stopTime = 40s
+**.udpApp[*].startTime = 0s
+#*.nodeSlave**.udpApp[*].stopTime = 4s
+#*.nodeMaster**.udpApp[*].stopTime = 4s
+**.udpApp[*].stopTime = 200s
 
 # NIC --- S2S---
 #
@@ -161,8 +166,6 @@ extends = Clusters
 **.configurator.dumpAddresses = true
 **.configurator.dumpRoutes = true
 
-**.udpApp[*].joinLocalMulticastGroups = true
-
 **.multicastForwarding = false # Multicast forwarding is handled by DYMO
 **.networkLayer.igmp.queryInterval = 60s
 
@@ -202,9 +205,10 @@ result-dir = ./results/ground_testing/
 **.udpApp[*].typename = "UDPBasicApp" # All other nodes with BasicApp
 **.udpApp[*].destAddresses = "nodeGround[0]"
 
-**.mac.numSlots = ${NM} + 2 # +1 for ground (acting like an extra master)
+#**.mac.numSlots = ${NM} + 2 # +1 for ground (acting like an extra master)
+**.mac.numSlots = ${NM} + 1
 
-*.nodeGround**.mac.clusterId = ${NM} # 0..3 for masters 4 for ground 5 for slave uplink
+#*.nodeGround**.mac.clusterId = ${NM} # 0..3 for masters 4 for ground 5 for slave uplink
 *.nodeGround**.radio.transmitter.communicationRange = 75m
 *.nodeGround**.mobilityType = "CircleMobility"
 *.nodeGround**.r = 85m
@@ -219,6 +223,11 @@ result-dir = ./results/multi_testing/
 
 *.nodeSlave**.numRadios = 2
 *.nodeMaster**.numRadios = 2
+
+# Static role selection
+*.nodeMaster[0].dymo.isGroundMaster = true
+*.nodeGround[0].dymo.isGroundStation = true
+*.node**.udpApp[*].joinLocalMulticastGroups = true
 
 # NIC --- S2G ---
 #
