Interface separation working with one master one slave

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,8 +6,8 @@
 # TODO: Seperate ini files
 [Config Clusters]
 network = Base
-#sim-time-limit = 5s
-sim-time-limit = 250s
+sim-time-limit = 5s
+#sim-time-limit = 250s
 #sim-time-limit.param-record-as-scalar = true
 
 # TODO: Multiple run repitions
@@ -57,13 +57,13 @@ num-rngs = 3
 **.udpApp[*].destPort = 5000
 **.udpApp[*].messageLength = ${ML = 128}B
 **.udpApp[*].messageLength.param-record-as-scalar = true
-#*.nodeSlave**.udpApp[*].sendInterval = 3s
-#*.nodeMaster**.udpApp[*].sendInterval = 2s
-**.udpApp[*].sendInterval = 10s
+*.nodeSlave**.udpApp[*].sendInterval = 3s
+*.nodeMaster**.udpApp[*].sendInterval = 2s
+#**.udpApp[*].sendInterval = 10s
 **.udpApp[*].startTime = 0s
-#*.nodeSlave**.udpApp[*].stopTime = 4s
-#*.nodeMaster**.udpApp[*].stopTime = 4s
-**.udpApp[*].stopTime = 200s
+*.nodeSlave**.udpApp[*].stopTime = 4s
+*.nodeMaster**.udpApp[*].stopTime = 4s
+#**.udpApp[*].stopTime = 200s
 
 # NIC --- S2S---
 #
@@ -195,7 +195,7 @@ extends = Clusters
 [Config GroundStation]
 #extends = Clusters
 extends = DYMO
-network = GroundStation
+network = GroundStation # Ignore warning
 result-dir = ./results/ground_testing/
 
 *.physicalEnvironment**.config = xmldoc("walls.xml")
@@ -203,7 +203,8 @@ result-dir = ./results/ground_testing/
 
 *.nodeGround**.udpApp[0].typename = "UDPSink"
 **.udpApp[*].typename = "UDPBasicApp" # All other nodes with BasicApp
-**.udpApp[*].destAddresses = "nodeGround[0]"
+#**.udpApp[*].destAddresses = "nodeGround[0]"
+**.udpApp[*].destAddresses = "10.2.0.1" # ... No specification of prefix?
 
 #**.mac.numSlots = ${NM} + 2 # +1 for ground (acting like an extra master)
 **.mac.numSlots = ${NM} + 1
