Fixed obstacle ignorance bug. Changed route discovery cancellation behavior of DYMO from dropping all delayed packets to 'reinjecting' all packets. CubeMac & DYMO now working with multiple orbiting clusters.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,8 +6,8 @@
 # TODO: Seperate ini files
 [Config Clusters]
 network = Base
-sim-time-limit = 5s
-#sim-time-limit = 250s
+#sim-time-limit = 5s
+#sim-time-limit = 20s
 #sim-time-limit.param-record-as-scalar = true
 
 # TODO: Multiple run repitions
@@ -22,8 +22,8 @@ num-rngs = 3
 
 # Cluster Configuration
 #
-*.numMasters = ${NM=1}
-*.slavesPerMaster = ${SPM=1}
+*.numMasters = ${NM=4}
+*.slavesPerMaster = ${SPM=2}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
 
@@ -57,13 +57,13 @@ num-rngs = 3
 **.udpApp[*].destPort = 5000
 **.udpApp[*].messageLength = ${ML = 128}B
 **.udpApp[*].messageLength.param-record-as-scalar = true
-*.nodeSlave**.udpApp[*].sendInterval = 3s
-*.nodeMaster**.udpApp[*].sendInterval = 2s
-#**.udpApp[*].sendInterval = 10s
+#*.nodeSlave**.udpApp[*].sendInterval = 3s
+#*.nodeMaster**.udpApp[*].sendInterval = 2s
+**.udpApp[*].sendInterval = 1s
 **.udpApp[*].startTime = 0s
-*.nodeSlave**.udpApp[*].stopTime = 4s
-*.nodeMaster**.udpApp[*].stopTime = 4s
-#**.udpApp[*].stopTime = 200s
+#*.nodeSlave**.udpApp[*].stopTime = 4s
+#*.nodeMaster**.udpApp[*].stopTime = 4s
+#**.udpApp[*].stopTime = 10s
 
 # NIC --- S2S---
 #
@@ -108,7 +108,7 @@ num-rngs = 3
 *.nodeSlave[*].mobilityType = "CircleMobility"
 *.node**.cx = 500m
 *.node**.cy = 500m
-*.node**.cz = 0.0m
+*.node**.cz = 10m
 *.nodeMaster**.r = 150m
 *.nodeMaster**.startAngle = parentIndex() * (360deg/${NM})
 *.nodeSlave**.r = 200m
@@ -144,8 +144,8 @@ num-rngs = 3
 # Visualization - Multiple media messes up medium visualization
 # TODO: Examine visualizer documentation further
 #
-#*.visualizer.**.packetNameFilter = "UDP*"
-*.visualizer.**.packetNameFilter = "RR*"
+*.visualizer.**.packetNameFilter = "UDP*"
+#*.visualizer.**.packetNameFilter = "RR*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
 					#							#
@@ -198,15 +198,13 @@ extends = DYMO
 network = GroundStation # Ignore warning
 result-dir = ./results/ground_testing/
 
-*.physicalEnvironment**.config = xmldoc("walls.xml")
-*.radioMedium**.obstacleLossType = "IdealObstacleLoss"
+**.physicalEnvironment**.config = xmldoc("walls.xml")
+**.radioMedium**.obstacleLossType = "IdealObstacleLoss"
 
 *.nodeGround**.udpApp[0].typename = "UDPSink"
-**.udpApp[*].typename = "UDPBasicApp" # All other nodes with BasicApp
-#**.udpApp[*].destAddresses = "nodeGround[0]"
+**.udpApp[*].typename = "UDPBasicApp" # All non-Ground nodes with BasicApp
 **.udpApp[*].destAddresses = "10.2.0.1" # ... No specification of prefix?
 
-#**.mac.numSlots = ${NM} + 2 # +1 for ground (acting like an extra master)
 **.mac.numSlots = ${NM} + 1
 
 #*.nodeGround**.mac.clusterId = ${NM} # 0..3 for masters 4 for ground 5 for slave uplink
@@ -276,19 +274,17 @@ result-dir = ./results/multi_testing/
 					#			OrbitingGroundStation			#
 					#											#
 
-[Config OrbitingGroundStation]
-extends = GroundStation
-sim-time-limit = 250s
-**.udpApp[*].stopTime = 200s
-**nodeMaster**.speed = 1.125mps * 2
-**nodeSlave**.speed = 1.5mps * 2
+[Config Orbiting]
+extends = MultiNIC
+**nodeMaster**.speed = 1.125mps * 4
+**nodeSlave**.speed = 1.5mps * 4
 
 					#									#
 					#			EnergyModelling			#
 					#									#
 
 [Config EnergyModelling]
-extends = GroundStation
+extends = MultiNIC
 #extends = OrbitingGroundStation
 #extends = MultiNIC
 
