--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -14,6 +14,8 @@ network = Base
 #repeat = 0
 #seed-set = ${runnumber} # this is the default
 
+*.roleOracle.updateFrequency = 2
+
 # Random Numbers
 #
 num-rngs = 3
