--- a/Simulation/OMNeT++/inet/.cproject
+++ b/Simulation/OMNeT++/inet/.cproject
@@ -211,7 +211,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="inet/transportlayer/tcp_lwip|inet/applications/voipstream|inet/linklayer/ext|inet/transportlayer/tcp_nsc|inet/routing/extras|transport/tcp_nsc|transport/tcp_lwip" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="inet/transportlayer/tcp_lwip|inet/transportlayer/tcp_nsc|inet/applications/voipstream|inet/linklayer/ext|transport/tcp_lwip|transport/tcp_nsc|inet/routing/extras" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -423,7 +423,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="inet/transportlayer/tcp_lwip|inet/applications/voipstream|inet/linklayer/ext|inet/transportlayer/tcp_nsc|inet/routing/extras|transport/tcp_nsc|transport/tcp_lwip" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
+						<entry excluding="inet/transportlayer/tcp_lwip|inet/transportlayer/tcp_nsc|inet/applications/voipstream|inet/linklayer/ext|transport/tcp_lwip|transport/tcp_nsc|inet/routing/extras" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
