Added timed self messages to role oracle

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -14,7 +14,7 @@ network = Base
 #repeat = 0
 #seed-set = ${runnumber} # this is the default
 
-*.roleOracle.updateFrequency = 2
+*.roleOracle.updateFrequency = 2s
 
 # Random Numbers
 #
