Ground master oracle role selection working

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -14,7 +14,7 @@ network = Base
 #repeat = 0
 #seed-set = ${runnumber} # this is the default
 
-*.roleOracle.updateFrequency = 2s
+*.roleOracle.updateFrequency = 5s
 
 # Random Numbers
 #
@@ -113,6 +113,9 @@ num-rngs = 3
 *.node**.cz = 10m
 *.nodeMaster**.r = 150m
 *.nodeMaster**.startAngle = parentIndex() * (360deg/${NM})
+#*.nodeMaster[0]**.startAngle = 0deg
+#*.nodeMaster[1]**.startAngle = 270deg
+#*.nodeMaster[2]**.startAngle = 180deg
 *.nodeSlave**.r = 200m
 *.nodeSlave**.startAngle = ((parentIndex() % ${NM})  * (360deg/${NM})) + (${SS} * floor(parentIndex() / ${NM})) - ((${SS} * (${SPM}-1)) * .5)
 
@@ -146,8 +149,8 @@ num-rngs = 3
 # Visualization - Multiple media messes up medium visualization
 # TODO: Examine visualizer documentation further
 #
-*.visualizer.**.packetNameFilter = "UDP*"
-#*.visualizer.**.packetNameFilter = "RR*"
+#*.visualizer.**.packetNameFilter = "UDP*"
+*.visualizer.**.packetNameFilter = "R*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
 					#							#
@@ -173,13 +176,13 @@ extends = Clusters
 
 **.dymo.clientAddresses = "" # Router is always its own client
 #**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); - TODO
-**.dymo.activeInterval = 20s # 5s 2. DYMO parameter group
+**.dymo.activeInterval = 5s # 5s 2. DYMO parameter group
 **.dymo.useMulticastRREP = false
 **.dymo.maxIdleTime = 200s # 200s MAX_IDLETIME
-**.dymo.maxSequenceNumberLifetime = 300s # Used to calculate default route expiration times
+**.dymo.maxSequenceNumberLifetime = 300s # 300s Used to calculate default route expiration times
 # "RREQ not received within RREQ_WAIT_TIME, RREQ_Gen may retry the Route Discovery by generating another RREQ."
-**.dymo.routeRREQWaitTime =	10s # 2s ROUTE_RREQ_WAIT_TIME
-**.dymo.rreqHolddownTime = 10s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
+**.dymo.routeRREQWaitTime =	2s # 2s ROUTE_RREQ_WAIT_TIME
+**.dymo.rreqHolddownTime = 5s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
 **.dymo.maxHopCount	= 20 # 20 3. DYMO parameter group #
 **.dymo.discoveryAttemptsMax = 3 # 3 string MAX_METRIC = default(""); double MAXTIME;
 **.dymo.appendInformation = true # true 4. DYMO parameter group - See DYMO.msg: AddressBlock addedNode[];
@@ -286,9 +289,7 @@ extends = MultiNIC
 					#									#
 
 [Config EnergyModelling]
-extends = MultiNIC
-#extends = OrbitingGroundStation
-#extends = MultiNIC
+extends = Orbiting
 
 *.node**.energyStorageType = "IdealEnergyStorage"
 *.node**.radio.energyConsumerType = "StateBasedEnergyConsumer"
