DYMO adjusted to facilitate the use of CSMA/CA

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -24,7 +24,7 @@ num-rngs = 3
 
 # Cluster Configuration
 #
-*.numMasters = ${NM=4}
+*.numMasters = ${NM=1}
 *.slavesPerMaster = ${SPM=2}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
@@ -302,5 +302,16 @@ extends = Orbiting
 *.node**.radio.energyConsumer.receiverBusyPowerConsumption = 5mW
 *.node**.radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
 
+# TODO: CDMA consumes more power
 *.node**.radio.energyConsumer.transmitterIdlePowerConsumption = 2mW
 *.node**.radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
+
+[Config CSMA]
+extends = Orbiting
+
+*.node*a**.wlan[0].macType = "CsmaCaMac"
+
+*.node*a**.wlan[0].mac.bitrate = 2Mbps
+*.node*a**.wlan[0].mac.headerLength = 32B
+*.node*a**.wlan[0].mac.useMACAcks = false
+*.node*a**.wlan[0].mac.mtu = 9999999
