--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -24,8 +24,8 @@ num-rngs = 3
 
 # Cluster Configuration
 #
-*.numMasters = ${NM=1}
-*.slavesPerMaster = ${SPM=2}
+*.numMasters = ${NM=8}
+*.slavesPerMaster = ${SPM=0}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
 
@@ -315,3 +315,8 @@ extends = Orbiting
 *.node*a**.wlan[0].mac.headerLength = 32B
 *.node*a**.wlan[0].mac.useMACAcks = false
 *.node*a**.wlan[0].mac.mtu = 9999999
+
+[Config TDMA]
+extends = Orbiting
+
+*.node*a**.wlan[0].mac.pureTDMA = true
