Added energy awareness to role oracle and dymo link cost metrics

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -24,8 +24,8 @@ num-rngs = 3
 
 # Cluster Configuration
 #
-*.numMasters = ${NM=8}
-*.slavesPerMaster = ${SPM=0}
+*.numMasters = ${NM=4}
+*.slavesPerMaster = ${SPM=2}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
 
@@ -307,7 +307,7 @@ extends = Orbiting
 *.node**.radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
 
 [Config CSMA]
-extends = Orbiting
+extends = EnergyModelling
 
 *.node*a**.wlan[0].macType = "CsmaCaMac"
 
@@ -317,6 +317,6 @@ extends = Orbiting
 *.node*a**.wlan[0].mac.mtu = 9999999
 
 [Config TDMA]
-extends = Orbiting
+extends = EnergyModelling
 
 *.node*a**.wlan[0].mac.pureTDMA = true
